general(shortened-url-api): add readme and finishing the application
