# src/modules/url/infra/http/routes/index.ts
@@ -19,31 +19,12 @@ const reCreateShortendUrlController = new ReCreateShortendUrlController();
 const updateShortenerUrlController = new UpdateShortenerUrlController();
 const reCreateExpiredShortenedUrlController = new ReCreateExpiredShortenedUrlController();
 
-urlRouter.post(
-    '/createurl',
-    /*    #swagger.parameters['obj'] = {
-  in: 'body',
-  description: 'Create a new shortener url',
-  schema: {
-      $url: '',
-  }
-} */ urlBodyValidation,
-    createShortenerUrlController.handle
-);
-urlRouter.get('/:shortenerUrl', getShortenerUrlController.handle);
+urlRouter.post('/createurl', urlBodyValidation, createShortenerUrlController.handle);
+urlRouter.get('/:hash', getShortenerUrlController.handle);
 urlRouter.put('/update/:hash', updateShortenerUrlController.handle);
 urlRouter.delete('/delete/:hash', deleteShortenerUrlController.handle);
 urlRouter.put('/status/:id', updateIsActiveShortenerUrlController.handle);
-urlRouter.post(
-    '/retrycreateshortenedurl/:hash',
-    /*    #swagger.parameters['url'] = {
-  in: 'body',
-  description: 'Recreate a already shortener url',
-  schema: {
-      $url: '',
-  }
-} */ reCreateShortendUrlController.handle
-);
+urlRouter.post('/retrycreateshortenedurl/:hash', reCreateShortendUrlController.handle);
 urlRouter.post(
     '/recreateexpiredshortenedurl',
     reCreateExpiredShortenedUrlController.handle
